fix overlapping event card + handle no event case
When there is only one event card it overlaps with content below the event section because the event card is set to an absolute position (fixed).
An event card with information stating that there are no events is rendered when there are none scheduled.

--- a/src/components/EventSection/EventCarousel/EventCarousel.module.css
+++ b/src/components/EventSection/EventCarousel/EventCarousel.module.css
@@ -15,7 +15,7 @@
     flex-shrink: 0;
 }
 
-.midEvent {
+.midEvent:not(:only-child) {
     position: absolute;
     z-index: 3;
     top: 4rem;
